[gd_scene load_steps=3 format=3 uid="uid://btcp1sgcebsyi"]

[ext_resource type="Script" path="res://Scripts/UI/Settings/SettingsWindow.gd" id="1_og7pw"]
[ext_resource type="Script" path="res://Scripts/UI/Settings/SettingsAudioTab.gd" id="2_kd25l"]

[node name="SettingsWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_og7pw")

[node name="Tint" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 80

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Video" type="TabBar" parent="MarginContainer/Panel/TabContainer"]
layout_mode = 2

[node name="Audio" type="TabBar" parent="MarginContainer/Panel/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_kd25l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="Master Slider" type="HSlider" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="Music Slider" type="HSlider" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
value = 50.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "SFX"

[node name="SFX Slider" type="HSlider" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
value = 50.0

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Fauna"

[node name="Fauna Slider" type="HSlider" parent="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
value = 50.0

[node name="Close Button" type="Button" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Close"

[connection signal="value_changed" from="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer/Master Slider" to="MarginContainer/Panel/TabContainer/Audio" method="on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer2/Music Slider" to="MarginContainer/Panel/TabContainer/Audio" method="on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer3/SFX Slider" to="MarginContainer/Panel/TabContainer/Audio" method="on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/TabContainer/Audio/MarginContainer/VBoxContainer/VBoxContainer4/Fauna Slider" to="MarginContainer/Panel/TabContainer/Audio" method="on_fauna_slider_value_changed"]
[connection signal="button_up" from="MarginContainer/Panel/Close Button" to="." method="on_close_clicked"]
