class_name SettingsAudioTab
extends TabBar


func on_fauna_slider_value_changed(value: float):
	print("Fauna volume: ", value, " (not implemented)")


func on_master_slider_value_changed(value: float):
	print("Master volume: ", value, " (not implemented)")


func on_music_slider_value_changed(value: float):
	print("Music volume: ", value, " (not implemented)")


func on_sfx_slider_value_changed(value: float):
	print("SFX volume: ", value, " (not implemented)")

